--- a/public_html/wp-content/themes/customTheme/css/custom-style.css
+++ b/public_html/wp-content/themes/customTheme/css/custom-style.css
@@ -139,12 +139,9 @@ header{
 .imgHome{
 border-radius: 10rem 0rem 10rem 0rem;
 margin: 0rem 1rem 0rem 0rem;
+height: 25rem;
+width: 30rem;
 }
-
-.imgHome2{
-  border-radius: 0rem 10rem 0rem 10rem;
-  
-  }
 
 /* === PostHomepage END ===*/
 
