--- a/public_html/wp-content/themes/customTheme/css/custom-style.css
+++ b/public_html/wp-content/themes/customTheme/css/custom-style.css
@@ -108,6 +108,7 @@ header{
 }
 
 .freccia {
+ fill: #0096bb;
   display: block;
     position: absolute;
     top: 60%;
@@ -116,6 +117,7 @@ header{
     cursor: pointer;
 }
 .freccia2 {
+  color: #0096bb;
   cursor: pointer;
   display: block;
     position: absolute;
@@ -140,7 +142,7 @@ header{
 border-radius: 10rem 0rem 10rem 0rem;
 margin: 0rem 1rem 0rem 0rem;
 height: 35rem;
-width: 60rem;
+width: 70rem;
 }
 
 /* === PostHomepage END ===*/
