--- a/public_html/wp-content/themes/customTheme/css/custom-style.css
+++ b/public_html/wp-content/themes/customTheme/css/custom-style.css
@@ -145,6 +145,10 @@ height: 35rem;
 width: 70rem;
 }
 
+h1.wp-block-heading{
+  font-family: "Playfair Display", serif;
+}
+
 /* === PostHomepage END ===*/
 
 
