--- a/public_html/wp-content/themes/customTheme/css/custom-style.css
+++ b/public_html/wp-content/themes/customTheme/css/custom-style.css
@@ -50,7 +50,7 @@ header{
 .videoHeader {
     position: relative;
     width: 100%;
-    height: 50rem;
+   
     object-fit: cover;
 }
 #nomeSito {
@@ -105,10 +105,12 @@ header{
 
 .containertesto{
   margin: 0rem 5rem 1rem 5rem;
+  text-align: center;
+  overflow: hidden;
 }
 
 .freccia {
- fill: #0096bb;
+ 
   display: block;
     position: absolute;
     top: 60%;
@@ -117,7 +119,7 @@ header{
     cursor: pointer;
 }
 .freccia2 {
-  color: #0096bb;
+  
   cursor: pointer;
   display: block;
     position: absolute;
@@ -125,9 +127,13 @@ header{
     left: 40%;
     height: Min(1.5vmax,27vw);
 }
+.hover{
+  color: #0096bb;
+  fill: #0096bb;
+}
 
 
-.hover:hover{
+.freccia:hover, .freccia2:hover, .hover:hover{
   fill: #EFBB1B;
   cursor: pointer;
   color: #EFBB1B;
@@ -139,7 +145,7 @@ header{
 }
 
 .imgHome{
-border-radius: 10rem 0rem 10rem 0rem;
+border-radius: 0rem 10rem 0rem 10rem;
 margin: 0rem 1rem 0rem 0rem;
 height: 35rem;
 width: 70rem;
@@ -157,4 +163,29 @@ h1.wp-block-heading{
 .paginadimerda{
   padding-top: 10rem;
 }
+
+/* ISOLE CARD IN PAGINA ISOLE*/
+
+.cardIsola:hover {
+  transform: scale(1.1);
+  z-index: 9;
+}
+.cardIsola {
+  transition: transform 0.3s ease;
+}
+
+
+/*PAGINA SINGOLA ISOLA*/
+.pisolatitolo{
+  font-size: 5rem;
+}
+
+.paragrafostrano p {
+  font-size: 1.5rem;
+}
+
+.titolodelcazzo h2{
+  font-size: 5rem;
+}
+
 
